Added weight to projects to sort properly, updated apache spark logo

--- a/content/software/ece4530.md
+++ b/content/software/ece4530.md
@@ -1,5 +1,6 @@
 +++
 title = "ECE4530 (Hardware/Software Codesign) - Main Project"
+weight = 500
 image = "/img/projects/ece4530-project.jpg"
 redirect = "https://github.com/chipsenkbeil-academic/codesign-challenge"
 tags = [ "project", "class assignment", "c", "verilog" ]
