--- a/content/software/ece4534.md
+++ b/content/software/ece4534.md
@@ -1,5 +1,6 @@
 +++
 title = "ECE 4534 (Embedded Systems) - Main Project"
+weight = 600
 image = "/img/projects/ece4534-project.jpg"
 redirect = "https://github.com/chipsenkbeil-academic/ece4534"
 tags = [ "project", "class assignment", "c", "embedded" ]
