Added missing section to 4th blog post

--- a/content/posts/004.md
+++ b/content/posts/004.md
@@ -40,9 +40,13 @@ __my-new-note__ represented the name of the note.
 
 ## Changes to Design
 
-If you look closely at the notes function listed above, you'll notice that
-there isn't any mention of __create__. At the end of the day, I found supporting
-two different names for the same action p
+If you look closely at the notes function as we progress through it, you'll 
+notice that there isn't any mention of __create__. At the end of the day, I
+found supporting two different names for the same action not useful. I set up
+my defaults such that `notes edit my-new-note` creates a new note and opens it
+for editing. This becomes even smoother with the default mode being file
+editing such that `notes my-new-note` creates and opens the file for editing as
+well.
 
 ## Implementation
 
