Updated blog posts to explicitly provide syntax highlighting

--- a/content/notes/005.md
+++ b/content/notes/005.md
@@ -9,7 +9,7 @@ tags = [ "proxmox" ]
 
 ### Removing subscription notice ###
 
-```
+```bash
 sed -i.bak 's/NotFound/Active/g' /usr/share/perl5/PVE/API2/Subscription.pm && systemctl restart pveproxy.service
 ```
 
@@ -26,7 +26,7 @@ use _nginx_ to redirect traffic on port 80 and 443 to port 8006. Below is
 the configuration created at `/etc/nginx/conf.d/proxmox.conf` after clearing
 the files `/etc/nginx/conf.d/default` and `/etc/nginx/site-enabled/default`.
 
-```
+```nginx
 upstream proxmox {
     server "senkbeil.org";
 }
@@ -66,32 +66,32 @@ My situation was that I had my SSD split into a root and data partition
 and had nothing on my HDD. To remedy this, I began by removing the
 unused data partition via:
 
-```
+```bash
 lvremove /dev/pve/data
 ```
 
 From there, I acquired a list of drives and available space:
 
-```
+```bash
 pvs
 ```
 
 I saw how much space was available on my primary SSD that I wanted
 to merge back into the root partition. In my case, 75.79g of space.
 
-```
+```bash
 lvresize -L +75.79g /dev/pve/root
 ```
 
 Finally, I resized the mapped partition:
 
-```
+```bash
 resize2fs /dev/mapper/pve-root
 ```
 
 After that had completed, I wanted to add my HDD as a thin LVM.
 
-```
+```bash
 fdisk /dev/sda
 ```
 
@@ -103,20 +103,20 @@ ended up being _31_. I finalized the change via `w`.
 
 After that, I created a physical volume via:
 
-```
+```bash
 pvcreate /dev/sda1
 ```
 
 And then proceeded to extend my extending volume group of pve via:
 
-```
+```bash
 vgextend "pve" /dev/sda1
 ```
 
 Once I had added the new drive to my pve volume group, I could allocate the
 rest of the available space to a thin LVM partition called data:
 
-```
+```bash
 lvcreate -l 100%FREE -T -n data pve
 ```
 
