--- a/content/posts/003.md
+++ b/content/posts/003.md
@@ -41,7 +41,7 @@ extension of _.md_. The function itself could be provided with the name of the
 note file such as _blogpost_ and it would in turn open the corresponding
 markdown file (e.g. _blogpost.md_).
 
-```
+```zsh
 notes() {
   local base_path="$HOME/.notes"
   mkdir -p "$base_path"
