--- a/content/posts/004.md
+++ b/content/posts/004.md
@@ -52,7 +52,7 @@ well.
 
 ### Defining Modes of Operation
 
-```
+```zsh
 local MODE_EDIT="edit"
 local MODE_REMOVE="remove"
 local MODE_LIST="list"
@@ -70,7 +70,7 @@ would be set using one of the constants above it.
 
 ### Specifying Aliases for Modes
 
-```
+```zsh
 local -a COMMAND_REMOVE
 COMMAND_REMOVE=(delete remove del rm d r)
 local -a COMMAND_LIST
@@ -90,7 +90,7 @@ remove aliases for each mode and centralizes them at the top of the function.
 
 ### Acquiring Date Information
 
-```
+```zsh
 local date="$(date +'%Y-%m-%d')"
 local human_date="$(date +'%A, %B %d, %Y (%Y-%m-%d)')"
 ```
@@ -107,7 +107,7 @@ human-readable.
 
 ### Creating the Base Path
 
-```
+```zsh
 local base_path="$HOME/.notes"
 mkdir -p "$base_path"
 ```
@@ -125,7 +125,7 @@ but it also means it supports a deeper base path.
 
 ### Setting Up State
 
-```
+```zsh
 local DEFAULT_NOTE_FILE="default"
 local DEFAULT_NOTE_NAME="default"
 local DEFAULT_NOTE_TITLE="General Notes"
@@ -148,7 +148,7 @@ as the __cmd__ variable for use in determining the mode of operation. E.g.
 
 ### Determine Mode of Operation
 
-```
+```zsh
 # Process specific modes if provided
 if [[ ${COMMAND_REMOVE[(ie)$cmd]} -le ${#COMMAND_REMOVE} ]]; then
   mode="$MODE_REMOVE"
@@ -176,7 +176,7 @@ code will be in for the remainder of the function. Currently, this is a series
 of if statements checking the command (first argument) against each of the
 arrays of aliases specified earlier. 
 
-```
+```zsh
 ${COMMAND_REMOVE[(ie)$cmd]} -le ${#COMMAND_REMOVE}
 ```
 
@@ -188,7 +188,7 @@ is no match found, the index after the last value in the array is returned,
 which would be greater than the last index in the array, thereby returning
 false in the condition.
 
-```
+```zsh
 shift
 cmd="$1"
 ```
@@ -212,7 +212,7 @@ note.
 
 ### Setting the Note State
 
-```
+```zsh
 # If date provided, will open notes for current date
 if [ "$cmd" = "date" ]; then
   note_name="date"
@@ -246,7 +246,7 @@ can be injected through commands like `notes date`, `notes edit date`, and even
 
 ### Creating the Note File if Missing
 
-```
+```zsh
 # Update full path
 note_path="$base_path/$note_file"
 
@@ -262,7 +262,7 @@ we're in the edit mode. If so and the file doesn't exist, the function will
 create a new file with markdown syntax for a top-level header. For instance,
 `notes my-new-note` will create a new file (named my-new-note.md) like below:
 
-```
+```markdown
 # Notes for my-new-note
 
 ```
@@ -270,7 +270,7 @@ create a new file with markdown syntax for a top-level header. For instance,
 This also applies to the _date_ syntax, where `notes date` for June 30th, 2018
 would create a new file named 2018-06-30.md and contents like below:
 
-```
+```markdown
 # Notes for Sunday, June 30, 2018 (2018-06-30)
 
 ```
@@ -283,7 +283,7 @@ associated operation.
 
 #### Opening a File for Editing (or Creation)
 
-```
+```zsh
 if [ "$mode" = "$MODE_EDIT" ]; then
   $EDITOR "$note_path"
 ```
@@ -296,7 +296,7 @@ to the file to edit. In my case, a call like `notes my-new-note` turns into
 
 #### Removing a File
 
-```
+```zsh
 elif [ "$mode" = "$MODE_REMOVE" ]; then
   if [ ! -f "$note_path" ]; then
     builtin echo "No note exists for $note_name!"
@@ -314,7 +314,7 @@ concluding thoughts.
 
 #### Listing All Note Files
 
-```
+```zsh
 elif [ "$mode" = "$MODE_LIST" ]; then
   ls "$base_path"
 ```
@@ -327,7 +327,7 @@ is to provide a means of filtering notes in some way.
 
 #### Displaying Help Text
 
-```
+```zsh
 elif [ "$mode" = "$MODE_HELP" ]; then
   builtin echo "Usage: notes [<command>] [<name>]
 
@@ -374,7 +374,7 @@ win for productivity and I encourage everyone to find their way.
 There is no license on this code. Consider it public domain to do with as you
 please.
 
-```
+```zsh
 notes() {
   local MODE_EDIT="edit"
   local MODE_REMOVE="remove"
